--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,10 +13,11 @@ android {
 
     defaultConfig {
         applicationId "com.rtchagas.pingsample"
-        minSdkVersion 19
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
